@@ -41,12 +41,6 @@
   - suggested by Leos Bitto,
     <http://lists.ee.ethz.ch/smokeping-users/msg01632.html>
 
-* CGI RETURN VALUE
-  return something else than 200 OK in error situations at least
-  when updating DYNAMIC addresses
-  - suggested by Marc Haber, 
-    <http://lists.ee.ethz.ch/smokeping-users/msg01644.html>
-
 * CONFIG
   make the .adr (and .snmp) directory configurable
   - suggested by Marc Haber,
