@@ -1,3 +1,5 @@
+* return '404 not found' when DYNAMIC updates fail
+  - niko, suggested by Marc Haber <mh+smokeping-users *zugschlus.de>
 * make errors in DYNAMIC updates appear in the web server error log
   -- niko
 * remove a quotemeta() call in Config::Grammar to allow metacharacters
